tests/baselines/reference/privateNameInObjectLiteral-2.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-2.ts(2,5): error TS18015: Private names are not allowed outside class bodies.


==== tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-2.ts (1 errors) ====
    const obj = {
        #foo() {
        ~~~~
!!! error TS18015: Private names are not allowed outside class bodies.
    
        }
    };
    